--- a/package.json
+++ b/package.json
@@ -2,22 +2,22 @@
   "name": "japanese-food-survey-frontend",
   "version": "0.1.0",
   "engines": {
-    "node": "14.x"
+    "node": "16.x"
   },
   "dependencies": {
     "bootstrap": "^5.1.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.5",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-multiselect-dropdown-bootstrap": "^1.1.0",
+    "react-scripts": "^5.0.0",
     "reactstrap": "^8.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build"
   },
-  "browserslist": {
-    "production": [],
-    "development": []
-  }
+  "browserslist": [
+    "last 1 version"
+  ]
 }
