--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.5",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.2.0",
     "react-scripts": "^5.0.0",
     "reactstrap": "^8.9.0"
   },
